[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "usad_beth"
version = "0.0.1"
description = "Performance evaluation of unsupervised stream anomaly detection algorithms on BETH dataset"
authors = [
  { name = "ev-er" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["usad_beth"]
force_sort_within_sections = true
